unpackaged/main/default/objects/Project_Template__c/Project_Template__c.object-meta.xml
<CustomObject>
    <label>Project Template</label>
    <nameField>
        <label>Project Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>