unpackaged/main/default/objects/Project_Template__c/fields/Decommission_Template__c.field-meta.xml
<CustomField>
    <fullName>Decommission_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Decommission Template</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>Project Templates (Decommission Template)</relationshipLabel>
    <relationshipName>Project_Templates1</relationshipName>
    <type>Lookup</type>
</CustomField>