unpackaged/main/default/objects/Project_Template__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Code</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Project Templates</relationshipLabel>
    <relationshipName>Project_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>