unpackaged/main/default/objects/Project_Template__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>Project Templates</relationshipLabel>
    <relationshipName>Project_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>