unpackaged/main/default/objects/Project_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Code__c</columns>
    <columns>Template__c</columns>
    <columns>Project_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>